# project-dumper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dump.txt  main.py  pyproject.toml
src/project_dumper/: __init__.py  cli.py  constants.py  files.py  gitignore.py  header.py  tree.py
