[project]
name = "produm"
version = "0.1.2"
description = "Flatten a project into a single LLM-friendly text dump"
authors = [{ name = "Pierre Lacerte" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pathspec"]
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/placerte/project-dumper"

[project.scripts]
produm = "project_dumper.cli:main"

[tool.uv]
package = true

